<resources>
    <string name="app_name">MyViewList_Demo</string>

    <string name="ciclerimg">加载带圆角的图片</string>
    <string name="leadingmarginspan">TextView 缩进指定距离</string>
    <string name="ymenueview">YMenuView 菜单</string>
    <string name="emojiview">emojiview 自定义</string>
    <string name="wheel3dview">3D旋转效果</string>
    <string name="broadcasts">广播的学习</string>
       <string name="Normalbroadcasts">无序广播</string>
       <string name="Orderedbroadcasts">有序广播</string>

    <string name="LockIndicator">九宫格解锁</string>
    <string name="LockIndicatortext">请绘制图案</string>

    <string name="activitytoresult">StartActivityResult的使用</string>
    <string name="bluetooth">调用本地的蓝牙</string>
    <string name="ios_dialog">仿IOS的dialog</string>
    <string name="pic_city">三级城市选择器</string>
    <string name="citypic">城市地址选择器</string>
</resources>
